fix(App): Fix overflow scroll styles css

--- a/src/components/ListOfItems/styles.module.css
+++ b/src/components/ListOfItems/styles.module.css
@@ -8,12 +8,9 @@
 
 .wrapperList {
   flex-direction: column;
-  width: 100%;
-  max-height: 100%;
-  padding-right: 16px;
-  list-style: none;
+  padding-right: 1rem;
+  overflow-y: scroll;
   overflow-x: hidden;
-  overflow-y: auto;
 }
 
 .wrapperList::-webkit-scrollbar {
@@ -36,6 +33,7 @@
 .wrapperResultItem {
   align-items: center;
   width: 100%;
+  height: 72px;
   min-height: 72px;
   padding: 0 20px 0 10px;
   border-bottom: 1px solid var(--border-dark-color);
@@ -53,6 +51,7 @@
 }
 
 .wrapperInfo {
+  height: fit-content;
   flex-direction: column;
   gap: 4px;
 }
